  * There are now three levels of repository trust.
  * untrust: Now marks the current repository as untrusted.
  * semitrust: Now restores the default trust level. (What untrust used to do.)
  * fsck, drop: Take untrusted repositories into account.
  * Bugfix: Files were copied from trusted remotes first even if their
    annex.cost was higher than other remotes.

 -- Joey Hess <joeyh@debian.org>  Wed, 19 Jan 2011 18:07:51 -0400

git-annex (0.18) unstable; urgency=low

  * Bugfix: `copy --to` and `move --to` forgot to stage location log changes
    after transferring the file to the remote repository.
    (Did not affect ssh remotes.)
  * fsck: Fix bug in moving of corrupted files to .git/annex/bad/
  * migrate: Fix support for --backend option.
  * unlock: Fix behavior when file content is not present.
  * Test suite improvements. Current top-level test coverage: 80%

 -- Joey Hess <joeyh@debian.org>  Fri, 14 Jan 2011 14:17:44 -0400

git-annex (0.17) unstable; urgency=low

  * unannex: Now skips files whose content is not present, rather than
    it being an error.
  * New migrate subcommand can be used to switch files to using a different
    backend, safely and with no duplication of content.
  * bugfix: Fix crash caused by empty key name. (Thanks Henrik for reporting.)

 -- Joey Hess <joeyh@debian.org>  Sun, 09 Jan 2011 10:04:11 -0400

git-annex (0.16) unstable; urgency=low

  * git-annex-shell: Avoid exposing any git repo config except for the
    annex.uuid when doing configlist.
  * bugfix: Running `move --to` with a remote whose UUID was not yet known
    could result in git-annex not recording on the local side where the
    file was moved to. This could not result in data loss, or even a
    significant problem, since the remote *did* record that it had the file.
  * Also, add a general guard to detect attempts to record information
    about repositories with missing UUIDs.
  * bugfix: Running `move --to` with a non-ssh remote failed.