@@ -132,7 +132,7 @@ Many git-annex commands will stage changes for later `git commit` by you.
 * unused
 
   Checks the annex for data that is not used by any files currently
-  in the annex, and prints a numbered list of the data. 
+  in the annex, and prints a numbered list of the data.
 
 * dropunused [number ...]
 
